# job-posting-cli-tool

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml
src/job_posting_cli/: __init__.py  clean.py  cli.py  collect.py  gui.py  url_export.py  xlsx.py
tests/: test_clean.py  test_collect.py  test_gui.py
